# model_registry

./: Dockerfile  Makefile  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/python/: app.py  db_store.py  meta.py  model.py
frontend/: .gitignore  Dockerfile  Makefile
frontend/source/: .dockerignore  default.conf
frontend/source/my-app/: .env  local_setup.env  package-lock.json  package.json
frontend/source/my-app/src/: App.css  App.js  ModelComponent.js  index.js
python/: app.py  db_store.py  meta.py  model.py
