[tool.poetry]
name = "model-api"
version = "0.1.0"
description = ""
authors = ["Andre Muench <andre.muench@statworx.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pymssql = "2.1.5"
SQLAlchemy = "^1.3.22"
pydantic-sqlalchemy = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
